# CUA_App

./: README.md  pyproject.toml  requirements.txt
src/: app_test.py  main.py  main_graph_test.py  requirements.txt  requirements_for_cua.txt  sample_log.txt  test.py
src/agents/: graph.py  graph_v2.py  planner.py  planner_state.py  token_tracker.py  worker.py
src/core/: engine.py  mllm.py  module.py
src/old_src/: graph.py  planner.py  planner_state.py  worker.py
src/prompt/: prompt.py
src/test/: Empty_form.docx  Form_1.docx  Form_2.docx  Form_3.docx
src/tools/: open_app.py
src/tools/computer_use/: cua_tool.py
src/tools/computer_use/AgentS/: cli_app.py  runner.py
src/tools/computer_use/AgentS/gui_agents/s3/core/: engine.py
src/tools/computer_use/AgentS/gui_agents/s3/memory/: procedural_memory.py
src/tools/computer_use/AgentS/gui_agents/s3/utils/: common_utils.py
src/tools/wait/: wait_tool.py
src/utils/: common_utils.py  formatters.py
