[project]
name = "cua-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "aistudio-sdk==0.3.8",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.75.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bce-python-sdk==0.9.55",
    "black==25.11.0",
    "bottleneck==1.6.0",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "comtypes==1.4.13",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "eval-type-backport==0.2.2",
    "fastapi==0.123.5",
    "filelock==3.20.0",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "future==1.0.0",
    "google-ai-generativelanguage==0.9.0",
    "google-api-core==2.28.1",
    "google-auth==2.43.0",
    "google-cloud-aiplatform==1.129.0",
    "google-cloud-bigquery==3.38.0",
    "google-cloud-core==2.5.0",
    "google-cloud-resource-manager==1.15.0",
    "google-cloud-storage==3.6.0",
    "google-crc32c==1.7.1",
    "google-genai==1.52.0",
    "google-resumable-media==2.8.0",
    "googleapis-common-protos==1.72.0",
    "grpc-google-iam-v1==0.14.3",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.1.7",
    "idna==3.11",
    "imagesize==1.4.1",
    "jiter==0.12.0",
    "joblib==1.5.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==1.1.0",
    "langchain-core==1.1.0",
    "langchain-google-genai==3.2.0",
    "langchain-google-vertexai==3.1.1",
    "langchain-openai==1.1.0",
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.2.12",
    "langsmith==0.4.53",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "modelscope==1.32.0",
    "mouseinfo==0.1.3",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "networkx==3.6",
    "numexpr==2.14.1",
    "numpy==2.3.5",
    "openai==2.8.1",
    "opencv-contrib-python==4.10.0.84",
    "opt-einsum==3.3.0",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "packaging==25.0",
    "paddleocr==3.3.2",
    "paddlepaddle==3.2.2",
    "paddlex==3.3.10",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "prettytable==3.17.0",
    "propcache==0.4.1",
    "proto-plus==1.26.1",
    "protobuf==6.33.1",
    "psutil==7.1.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==22.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pyautogui==0.9.54",
    "pyclipper==1.4.0",
    "pycryptodome==3.23.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygetwindow==0.0.9",
    "pygments==2.19.2",
    "pymsgbox==2.0.1",
    "pymupdf>=1.26.7",
    "pypdfium2==5.1.0",
    "pyperclip==1.11.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.1",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pytesseract==0.3.13",
    "python-bidi==0.6.7",
    "python-dateutil==2.9.0.post0",
    "pytokens==0.3.0",
    "pytweening==1.2.0",
    "pytz==2025.2",
    "pywin32==311",
    "pywinauto==0.6.9",
    "pyyaml==6.0.2",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rsa==4.9.1",
    "ruamel-yaml==0.18.16",
    "ruamel-yaml-clib==0.2.15",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "together==1.5.31",
    "toml==0.10.2",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "ujson==5.11.0",
    "urllib3==2.5.0",
    "uuid-utils==0.12.0",
    "uvicorn==0.38.0",
    "validators==0.35.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]
